Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-17367

Finished find messagebox is not owned by Regedit window

    XMLWordPrintable

Details

    Description

      Steps to reproduce:

      1. Open Regedit.
      2. Click "Edit" -> "Find".
      3. Type any keyword in the search field that definitely doesn't exist in the registry (e. g., I typed "lol").
      4. Click "Find".

      It will not find any keys/values containing that keyword, and after nothing will found, will appear a messagebox that the search in registry is completed.
      Then try to click on any place in Regedit window outside the messagebox.  It will hide by the main window, which means that messagebox is not owned by Regedit window: regedit_before_1.mp4.
      In Windows Regedit, it is owned by the main window, so it always will be visible on the top until user will not close it manually, so he will able to read the notification in any case: MS_regedit_1.mp4.

      I made a fix for this, and will submit a PR.  After my changes, it has the same behaviour as in MS regedit: regedit_after_1.mp4.

      Attachments

        1. MS_regedit_1.mp4
          1.57 MB
        2. regedit_after_1.mp4
          1.73 MB
        3. regedit_before_1.mp4
          1.24 MB

        Activity

          People

            Oleg Dubinskij Oleg Dubinskiy
            Oleg Dubinskij Oleg Dubinskiy
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: