[REGEDIT] Make "finished find" messagebox owned by Regedit window (#3369)

Same behaviour as in MS Regedit.
CORE-17367